# pooii-tarea-6-entrega-03-07-otreblan

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
bt/: node.h
ejercicio1/: ejercicio1.md  input1.txt  input2.txt  input4.txt
ejercicio2/: ejercicio2.md
include/: ejercicios.hpp  funciones.hpp  node.hpp
pkg/: CMakeLists.txt
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  ejercicios.cpp  funciones.cpp  lib.h  main.cpp  node.cpp
